task2/mychart/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host:  www.my-application.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-link
                port:
                  number: 8080
